2013-08-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix handling of A in float negation and equality comparison, more flexible addition and subtraction.
	* support/regression/tests/float_single.c:
	  Enable tests for asinf(), atanf(), cosf(), sinf(), sinhf().

2013-08-25 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic16devices.txt:
	  add flag indicating XINST availability per device
	* src/pic16/device.c:
	  parse XINST flag in pic16devices.txt
	* src/pic16/device.h:
	  add field to store XINST availability per device
	* src/pic16/glue.c:
	  emit warning on code breakage when XINST is supported and not
	  explicitly disabled (#pragma config XINST=OFF).
	* src/pic16/main.c:
	  detect and remember occurrence of #pragma config XINST=OFF
	* support/scripts/optimize_pic16devices.pl:
	  support new XINST flag
	* support/scripts/pic16_update_xinst.sh:
	  update XINST flags is pic16devices.txt from information extracted
	  out of gputils/libgputils/gpprocessor.c

2013-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Be a little bit more flexible about addition operands - necessary to make Coremark compile.

2013-08-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Eliminate dead popw / pushw pairs.

2013-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient left shift by literal.

2013-08-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug 2205 (return discarded if
	  missing expected operand)

2013-08-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient right shift by literal.

2013-08-08 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: added some STM8 tools info, various fixes

2013-08-07 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: updated Sourceforge URLs

2013-08-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
